--- a/HTML_LANG.html
+++ b/HTML_LANG.html
@@ -1,7 +1,11 @@
-<h1><b>Avengers</b></h1>
-<h2><b>Iron Man</b></h2>
-<p>Also goes by name <b>Tony Stark</b></p>
-<h2><b>Caption America</b></h2>
-<p>Also goes by name <b>Steave Rogers</b></p>
-<h2><b>Hulk</b></h2>
-<p>Also goes by name <b>Brouce Banner</b></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>THE BOILERPLATE CODE</title>
+</head>
+<body>
+    <P><B>HELLO WORLD!</B></P>
+</body>
+</html>
