--- a/HTML_LANG.html
+++ b/HTML_LANG.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THE BOILERPLATE CODE</title>
-</head>
-<body>
-    <P><B>HELLO WORLD!</B></P>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Lists</title>
+    </head>
+
+    <body>
+        <ul>
+            <li>
+                goo goo
+            </li>
+            <li>
+                gaa gaa
+            </li>
+            <li>
+                baa baa
+            </li>
+        </ul>
+        <ol type = "A">
+            <li>
+                harsh
+            </li>
+            <li>
+                purav
+            </li>
+            <li>
+                mohit
+            </li>
+        </ol>
+    </body>
 </html>
