fruits and images

--- a/HTML_LANG.html
+++ b/HTML_LANG.html
@@ -3,31 +3,23 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Lists</title>
+        <title>fruits & images</title>
     </head>
 
     <body>
+        <H1>
+            LISTS OF FRUITs
+        </H1>
         <ul>
             <li>
-                goo goo
+                apple <a href="apple.webp"> see a picture of apple</a>
             </li>
             <li>
-                gaa gaa
+                orange <a href="orange.webp"> see a picture of orange</a>
             </li>
             <li>
-                baa baa
+                watermelon <a href="water.webp"> see a picture of watermelon</a>
             </li>
         </ul>
-        <ol type = "A">
-            <li>
-                harsh
-            </li>
-            <li>
-                purav
-            </li>
-            <li>
-                mohit
-            </li>
-        </ol>
     </body>
 </html>
