--- a/HTML_LANG.html
+++ b/HTML_LANG.html
@@ -3,22 +3,59 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>fruits & images</title>
+        <title>basic porfolio</title>
     </head>
 
     <body>
         <H1>
-            LISTS OF FRUITs
+            Gavit Thakral  <img src="pp (4).JPG" height="100px" width="60px">
         </H1>
         <ul>
-            <li>
-                apple <a href="apple.webp"> see a picture of apple</a>
+            <li><b>Education </b>
+                <ul>
+                    <li>
+                        Schooling from st. francies xavier school, hisar   
+                    </li>
+                    <li>
+                        graduation from DN. collage ,hisar
+                    </li>
+                </ul>
             </li>
-            <li>
-                orange <a href="orange.webp"> see a picture of orange</a>
+            <li> <b>Skills</b>
+                <ul>
+                    <li>
+                        good in DSA
+                    </li>
+                    <li>
+                        problem solving
+                    </li>
+                    <li>
+                        java language
+                    </li>
+                    <li>
+                        learning HTML
+                    </li>
+                </ul>
             </li>
-            <li>
-                watermelon <a href="water.webp"> see a picture of watermelon</a>
+            <li><b>Hobbies</b>
+                <ul>
+                    <li>
+                        dancing
+                    </li>
+                    <li>
+                        learning language's
+                    </li>
+                </ul>
+            </li>
+            <li><b>contect</b>
+                <ul>
+                    <li>
+                        phone no: 857088797321
+                    </li>
+                    <li>
+                        git hub: <a href="https://github.com/thakralgarvit">thakralgarvit</a>
+                    </li>
+                </ul>
             </li>
         </ul>
     </body>
