--- a/HTML_LANG.html
+++ b/HTML_LANG.html
@@ -10,6 +10,8 @@
         <H1>
             Gavit Thakral  <img src="pp (4).JPG" height="100px" width="60px">
         </H1>
+        <p>today is 9<sup>th</sup> of september &amp; 2<sup>4</sup> &equals; 16</p>
+        <hr />
         <ul>
             <li><b>Education </b>
                 <ul>
@@ -21,6 +23,7 @@
                     </li>
                 </ul>
             </li>
+            <hr />
             <li> <b>Skills</b>
                 <ul>
                     <li>
@@ -37,6 +40,7 @@
                     </li>
                 </ul>
             </li>
+            <hr />
             <li><b>Hobbies</b>
                 <ul>
                     <li>
@@ -47,6 +51,7 @@
                     </li>
                 </ul>
             </li>
+            <hr />
             <li><b>contect</b>
                 <ul>
                     <li>
@@ -58,5 +63,13 @@
                 </ul>
             </li>
         </ul>
+        <hr>
+            <section><b>achivemet</b>
+                <ul>
+                    <li>lead in the collage dance team and won the compition inter collage</li>
+                    <li>&copy; on multipal things.</li>
+                    <li>&trade; on every technology possiable.</li>
+                </ul>
+            </section>
     </body>
 </html>
