--- a/HTML_LANG.html
+++ b/HTML_LANG.html
@@ -7,69 +7,62 @@
     </head>
 
     <body>
-        <H1>
-            Gavit Thakral  <img src="pp (4).JPG" height="100px" width="60px">
-        </H1>
-        <p>today is 9<sup>th</sup> of september &amp; 2<sup>4</sup> &equals; 16</p>
-        <hr />
-        <ul>
-            <li><b>Education </b>
-                <ul>
-                    <li>
-                        Schooling from st. francies xavier school, hisar   
-                    </li>
-                    <li>
-                        graduation from DN. collage ,hisar
-                    </li>
-                </ul>
-            </li>
-            <hr />
-            <li> <b>Skills</b>
-                <ul>
-                    <li>
-                        good in DSA
-                    </li>
-                    <li>
-                        problem solving
-                    </li>
-                    <li>
-                        java language
-                    </li>
-                    <li>
-                        learning HTML
-                    </li>
-                </ul>
-            </li>
-            <hr />
-            <li><b>Hobbies</b>
-                <ul>
-                    <li>
-                        dancing
-                    </li>
-                    <li>
-                        learning language's
-                    </li>
-                </ul>
-            </li>
-            <hr />
-            <li><b>contect</b>
-                <ul>
-                    <li>
-                        phone no: 857088797321
-                    </li>
-                    <li>
-                        git hub: <a href="https://github.com/thakralgarvit">thakralgarvit</a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
+        <table border="black">
+            <caption>Food menu </caption>
+            <tr>
+                <th rowspan="2">Iteam</th>
+                <th colspan="2">Price</th>
+            </tr>
+            <tr>
+                <th>INR</th>
+                <th>USD</th>
+            </tr>
+            <tr>
+                <td>frooti</td>
+                <td>10</td>
+                <td>0.14</td>
+            </tr>
+            <tr>
+                <td>samosa</td>
+                <td>12</td>
+                <td>0.17</td>
+            </tr>
+            <tr>
+                <td>chips</td>
+                <td>20</td>
+                <td>0.28</td>
+            </tr>
+        </table>
         <hr>
-            <section><b>achivemet</b>
-                <ul>
-                    <li>lead in the collage dance team and won the compition inter collage</li>
-                    <li>&copy; on multipal things.</li>
-                    <li>&trade; on every technology possiable.</li>
-                </ul>
-            </section>
+        <table border="black">
+            <caption>A test table with merged cells</caption>
+            <tr>
+                <th rowspan="2"></th>
+                <th colspan="2">Average</th>
+                <th rowspan="2">Red eyes</th>
+            </tr>
+            <tr>
+                <th>height</th>
+                <th>weight</th>
+            </tr>
+            <tr>
+                <td>males</td>
+                <td>1.9</td>
+                <td>0.003</td>
+                <td>40%</td>
+            </tr>
+            <tr>
+                <td>females</td>
+                <td>1.7</td>
+                <td>0.002</td>
+                <td>43%</td>
+            </tr>
+        </table>
+        <hr>
+
+        <form action="https://www.youtube.com/results">
+            <input type="text" placeholder="search here" name="search_query">
+            <button>submit</button>
+        </form>
     </body>
 </html>
