--- a/HTML_LANG.html
+++ b/HTML_LANG.html
@@ -3,66 +3,126 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>basic porfolio</title>
+        <title>Practice questions</title>
     </head>
 
     <body>
-        <table border="black">
-            <caption>Food menu </caption>
-            <tr>
-                <th rowspan="2">Iteam</th>
-                <th colspan="2">Price</th>
-            </tr>
-            <tr>
-                <th>INR</th>
-                <th>USD</th>
-            </tr>
-            <tr>
-                <td>frooti</td>
-                <td>10</td>
-                <td>0.14</td>
-            </tr>
-            <tr>
-                <td>samosa</td>
-                <td>12</td>
-                <td>0.17</td>
-            </tr>
-            <tr>
-                <td>chips</td>
-                <td>20</td>
-                <td>0.28</td>
-            </tr>
-        </table>
-        <hr>
-        <table border="black">
-            <caption>A test table with merged cells</caption>
-            <tr>
-                <th rowspan="2"></th>
-                <th colspan="2">Average</th>
-                <th rowspan="2">Red eyes</th>
-            </tr>
-            <tr>
-                <th>height</th>
-                <th>weight</th>
-            </tr>
-            <tr>
-                <td>males</td>
-                <td>1.9</td>
-                <td>0.003</td>
-                <td>40%</td>
-            </tr>
-            <tr>
-                <td>females</td>
-                <td>1.7</td>
-                <td>0.002</td>
-                <td>43%</td>
-            </tr>
-        </table>
-        <hr>
-
-        <form action="https://www.youtube.com/results">
-            <input type="text" placeholder="search here" name="search_query">
+        <h1>Registration Form</h1>
+        <form action="/severs">
+            <input type="text" placeholder="First Name" name="Firstname">
+            <input type="text" placeholder="Last Name" name="Lastname">
+            <div>
+                <label for="gen">Please Select your Gender</label>
+                <select name="gen" id="gen">
+                    <option>Male</option>
+                    <option>Female</option>
+                </select>
+            </div>
+            <div>
+                <label for="terms">Do you agree on all terms of service</label>
+                <input type="checkbox" id="terms" name="terms">
+                yes, i agree
+            </div>
+            
             <button>submit</button>
+        </form>
+        <br>
+        <hr>
+        <h2>Table</h2>
+        <table border="black">
+            <caption>Student Informaion</caption>
+            <tr>
+                <th rowspan="6">Info</th>
+                <th rowspan="2">Name</th>
+                <th colspan="2">Address</th>
+            </tr>
+            <tr>
+                <th>City</th>
+                <th>House</th>
+            </tr>
+            <tr>
+                <td>A</td>
+                <td>Delhi</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <td>B</td>
+                <td>Mumbai</td>
+                <td>2</td>
+            </tr>
+            <tr>
+                <td>C</td>
+                <td>Kolkata</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>D</td>
+                <td>Pune</td>
+                <td>4</td>
+            </tr>
+        </table>
+        <br>
+        <hr>
+        <br>
+        <form action="/server">
+            <div>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name">
+            </div>
+            <div>
+                <label for="gen">Sex:</label>
+                <input type="radio" id="male" name="gen" placeholder="male" value="male">
+                <label for="male">Male</label>
+                <input type="radio" id="female" name="gen" placeholder="female" value="female">
+                <label for="female">Female</label>
+            </div>
+            <div>
+                <label for="con">Country: </label>
+                <select id="con" name="con">
+                    <option>Selct your option</option>
+                    <option>India</option>
+                    <option>USA</option>
+                    <option>China</option>
+                    <option>Japan</option>
+                </select>
+            </div>
+            <label for="feedback">Message:</label><br>
+            <textarea id="feedback" name="feed" rows="4" cols="30" placeholder="plese give us your valueable feedback"></textarea>
+            <div>
+            <input type="checkbox" name="sub"> Subscribe?
+            <button>submit</button>
+            </div>
+        </form>
+        <br>
+        <hr>
+        <br>
+        <form action="/sever">
+            <h2>Feedback Form</h2>
+            <div>
+                <label for="name">Name: </label>
+                <input type="text" placeholder="Write your name" name="name" id="name"><br>
+                <label for="email">Email: </label>
+                <input type="email" placeholder="Write your email" name="email" id="email">
+            </div>
+            <div>
+                <label for="feed">Message: </label><br>
+                <textarea id="feed" name="feedback" rows="4" cols="30"></textarea>
+            </div>
+            <div>
+                <label for="rate">Rate us our of 5: </label> <br>
+                <input type="radio" id="1" name="rate" value="1">
+                <label for="1">1</label><br>
+                <input type="radio" id="1" name="rate" value="2">
+                <label for="1">2</label><br>
+                <input type="radio" id="1" name="rate" value="3">
+                <label for="1">3</label><br>
+                <input type="radio" id="1" name="rate" value="4">
+                <label for="1">4</label><br>
+                <input type="radio" id="1" name="rate" value="5">
+                <label for="5">5</label><br>
+            </div>
+            <br><br>
+            <button>send your messae!</button>
         </form>
     </body>
 </html>
