--- a/HTML_LANG.html
+++ b/HTML_LANG.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Practice questions</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Registration Form</h1>
+        <h2>Registration Form</h2>
         <form action="/severs">
             <input type="text" placeholder="First Name" name="Firstname">
             <input type="text" placeholder="Last Name" name="Lastname">
@@ -124,5 +125,6 @@
             <br><br>
             <button>send your messae!</button>
         </form>
+        <h1>garvit<br>thakral</h1>
     </body>
 </html>
