word pad and nev bar

--- a/HTML_LANG.html
+++ b/HTML_LANG.html
@@ -8,19 +8,24 @@
     </head>
 
     <body>
-        <div class="card">
-            <img src="men.jpg" alt="men">
-            <div class="disc">
-                <h2>garvit thakral</h2>
-                <p>devloper</p>
-            </div>
+        <div id="border">
+            <div class="box"><h1>A</h1></div>
+            <div class="box"><h1>B</h1></div>
+            <div class="box"><h1>C</h1></div>
+            <div class="box"><h1>D</h1></div>
+            <div class="box"><h1>E</h1></div>
+            <div class="box"><h1>F</h1></div>
+            <div class="box"><h1>G</h1></div>
+            <div class="box"><h1>H</h1></div>
+            <div class="box"><h1>I</h1></div>
         </div>
-        <div class="card">
-            <img src="women.jpg" alt="women">
-            <div class="disc">
-                <h2>Simran Puniyani</h2>
-                <p>banker</p>
-            </div>
+        <hr>
+        <div id="bar">
+            <div class="bar"><h3>logo</h3></div>
+            <div class="bar"><h3>home</h3></div>
+            <div class="bar"><h3>about</h3></div>
+            <div class="bar"><h3>content</h3></div>
+            
         </div>
     </body>
 </html>
