--- a/HTML_LANG.html
+++ b/HTML_LANG.html
@@ -8,24 +8,38 @@
     </head>
 
     <body>
-        <div id="border">
-            <div class="box"><h1>A</h1></div>
-            <div class="box"><h1>B</h1></div>
-            <div class="box"><h1>C</h1></div>
-            <div class="box"><h1>D</h1></div>
-            <div class="box"><h1>E</h1></div>
-            <div class="box"><h1>F</h1></div>
-            <div class="box"><h1>G</h1></div>
-            <div class="box"><h1>H</h1></div>
-            <div class="box"><h1>I</h1></div>
-        </div>
-        <hr>
-        <div id="bar">
-            <div class="bar"><h3>logo</h3></div>
-            <div class="bar"><h3>home</h3></div>
-            <div class="bar"><h3>about</h3></div>
-            <div class="bar"><h3>content</h3></div>
-            
+        <header><a href="adoptme.com">adoptme.com</a></header>
+        <h2>adopt a <span id="pet">pet</span> today</h2>
+        <div id="play">
+            <div class="cards">
+                <img src="D:\code\photos\dog.jpg" alt="dog pic">
+                <h3>tommy</h3>
+                <p>Adopting a dog brings numerous benefits to both the pet and the owner. 
+                    Dogs offer unconditional love, companionship, and emotional support, 
+                    reducing feelings of loneliness and stress. They encourage a more active 
+                    lifestyle through regular walks and playtime, improving physical health. 
+                    Dogs can also enhance social interactions, as they often attract attention 
+                    and conversations. Additionally, adopting a dog from a shelter saves a life, 
+                    giving the animal a second chance and freeing up resources for other animals 
+                    in need. Overall, dogs enrich our lives with joy, loyalty, and a sense of 
+                    purpose, making them wonderful additions to any family.
+                </p>
+            </div>
+            <div class="cards">
+                <img src="D:\code\photos\cat.jpg" alt="cat pic">
+                <h3>tom</h3>
+                <p>
+                    Adopting a cat offers numerous benefits for both the pet and the owner.
+                    Cats provide companionship and emotional support, helping to reduce
+                    stress and anxiety. Their independent nature makes them low-maintenance
+                    pets, requiring less attention than dogs while still offering affection.
+                    Cats can improve mental health by providing a sense of purpose and routine.
+                    They are also excellent for small living spaces, adapting well to apartments. 
+                    Additionally, adopting a cat from a shelter saves a life, reduces overpopulation, 
+                    4and supports animal welfare organizations. Overall, cats bring joy, comfort, 
+                    and a calming presence to any household.
+                </p>
+            </div>
         </div>
     </body>
 </html>
