--- a/HTML_LANG.html
+++ b/HTML_LANG.html
@@ -8,38 +8,13 @@
     </head>
 
     <body>
-        <header><a href="adoptme.com">adoptme.com</a></header>
-        <h2>adopt a <span id="pet">pet</span> today</h2>
-        <div id="play">
-            <div class="cards">
-                <img src="D:\code\photos\dog.jpg" alt="dog pic">
-                <h3>tommy</h3>
-                <p>Adopting a dog brings numerous benefits to both the pet and the owner. 
-                    Dogs offer unconditional love, companionship, and emotional support, 
-                    reducing feelings of loneliness and stress. They encourage a more active 
-                    lifestyle through regular walks and playtime, improving physical health. 
-                    Dogs can also enhance social interactions, as they often attract attention 
-                    and conversations. Additionally, adopting a dog from a shelter saves a life, 
-                    giving the animal a second chance and freeing up resources for other animals 
-                    in need. Overall, dogs enrich our lives with joy, loyalty, and a sense of 
-                    purpose, making them wonderful additions to any family.
-                </p>
-            </div>
-            <div class="cards">
-                <img src="D:\code\photos\cat.jpg" alt="cat pic">
-                <h3>tom</h3>
-                <p>
-                    Adopting a cat offers numerous benefits for both the pet and the owner.
-                    Cats provide companionship and emotional support, helping to reduce
-                    stress and anxiety. Their independent nature makes them low-maintenance
-                    pets, requiring less attention than dogs while still offering affection.
-                    Cats can improve mental health by providing a sense of purpose and routine.
-                    They are also excellent for small living spaces, adapting well to apartments. 
-                    Additionally, adopting a cat from a shelter saves a life, reduces overpopulation, 
-                    4and supports animal welfare organizations. Overall, cats bring joy, comfort, 
-                    and a calming presence to any household.
-                </p>
-            </div>
+        <div class="gridtable">
+            <div id="head" class="box">header(1row,12col)</div>
+            <div id="sidebar" class="box">sidebar(10row,3col)</div>
+            <div id="nav" class="box">navigation(1row,6col)</div>
+            <div id="ads" class="box">ads(10row,3col)</div>
+            <div id="main" class="box">main(9row,6col)</div>
+            <div id="foot" class="box">footer(1row,12col)</div>
         </div>
     </body>
 </html>
