--- a/HTML_LANG.html
+++ b/HTML_LANG.html
@@ -3,18 +3,84 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CSS part 2</title>
+        <title>Netflix mini project</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+            rel="stylesheet"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     </head>
-
     <body>
-        <div class="gridtable">
-            <div id="head" class="box">header(1row,12col)</div>
-            <div id="sidebar" class="box">sidebar(10row,3col)</div>
-            <div id="nav" class="box">navigation(1row,6col)</div>
-            <div id="ads" class="box">ads(10row,3col)</div>
-            <div id="main" class="box">main(9row,6col)</div>
-            <div id="foot" class="box">footer(1row,12col)</div>
+        <div class="main_box">
+            <input type="checkbox" id="check">
+            <div class="btn_one">
+            <label for="check">
+                <i class="fa-solid fa-bars"></i>
+            </label>
+            </div>
+
+            <div class="sidebar">
+                <div class="logo">
+                    <a href="#">Netflix</a>
+                </div>
+
+                <div class="btn_two">
+                    <label for="check">
+                        <i class="fa-solid fa-xmark"></i>
+                    </label>
+                </div>
+
+                <div class="menu">
+                    <ul>
+                        <li>
+                            <i class="fa-solid fa-image"></i>
+                            <a href="#">Gallery</a>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                            <a href="#">Shortcuts</a>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-photo-film"></i>
+                            <a href="#">Exhibits</a>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-calendar-days"></i>
+                            <a href="#">Events</a>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-store"></i>
+                            <a href="#">Store</a>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-phone"></i>
+                            <a href="#">Contact</a>
+                        </li>
+                        <li>
+                            <i class="fa-regular fa-comments"></i>
+                            <a href="#">Feedback</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="social">
+                    <ul>
+                        <a href="#">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a>
+                    </ul>
+                </div>
+            </div>
         </div>
     </body>
 </html>
