--- a/HTML_LANG.html
+++ b/HTML_LANG.html
@@ -3,84 +3,47 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Netflix mini project</title>
+        <title>Pricing page</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
-            rel="stylesheet"/>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     </head>
     <body>
-        <div class="main_box">
-            <input type="checkbox" id="check">
-            <div class="btn_one">
-            <label for="check">
-                <i class="fa-solid fa-bars"></i>
-            </label>
+        <h2 class="text-center">Pricing</h2>
+        <p class="text-center">Plese checkout are most effective payment meathods</p>
+        <div class="row justify-content-around text-center">
+            <div class="card col-sm-5 col-md-3 mb-3 me-3" style="width: 18rem;">
+                <div class="card-header"><b>Free</b></div>
+                <div class="card-body">
+                <h2 class="card-title">$0/mo</h2>
+                <p class="card-text">
+                    10 user included<br>2 GB of storage<br>Email support
+                </p>
+                <a href="#" class="btn btn-outline-primary">Sign up for free</a>
+                </div>
             </div>
-
-            <div class="sidebar">
-                <div class="logo">
-                    <a href="#">Netflix</a>
+            <div class="card col-sm-5 col-md-3 mb-3 me-3" style="width: 18rem;">
+                <div class="card-header"><b>Pro</b></div>
+                <div class="card-body">
+                <h2 class="card-title">$15/mo</h2>
+                <p class="card-text">
+                    20 user included<br>10 GB of storage<br>Priority email support
+                </p>
+                <a href="#" class="btn btn-primary">Get started</a>
                 </div>
-
-                <div class="btn_two">
-                    <label for="check">
-                        <i class="fa-solid fa-xmark"></i>
-                    </label>
-                </div>
-
-                <div class="menu">
-                    <ul>
-                        <li>
-                            <i class="fa-solid fa-image"></i>
-                            <a href="#">Gallery</a>
-                        </li>
-                        <li>
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                            <a href="#">Shortcuts</a>
-                        </li>
-                        <li>
-                            <i class="fa-solid fa-photo-film"></i>
-                            <a href="#">Exhibits</a>
-                        </li>
-                        <li>
-                            <i class="fa-solid fa-calendar-days"></i>
-                            <a href="#">Events</a>
-                        </li>
-                        <li>
-                            <i class="fa-solid fa-store"></i>
-                            <a href="#">Store</a>
-                        </li>
-                        <li>
-                            <i class="fa-solid fa-phone"></i>
-                            <a href="#">Contact</a>
-                        </li>
-                        <li>
-                            <i class="fa-regular fa-comments"></i>
-                            <a href="#">Feedback</a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="social">
-                    <ul>
-                        <a href="#">
-                            <i class="fa-brands fa-facebook"></i>
-                        </a>
-                        <a href="#">
-                            <i class="fa-brands fa-twitter"></i>
-                        </a>
-                        <a href="#">
-                            <i class="fa-brands fa-instagram"></i>
-                        </a>
-                        <a href="#">
-                            <i class="fa-brands fa-youtube"></i>
-                        </a>
-                    </ul>
+            </div>
+            <div class="card col-sm-10 col-md-3 mb-3 me-3" style="width: 18rem;">
+                <div class="card-header"><b>Enterprise</b></div>
+                <div class="card-body">
+                <h2 class="card-title">$29/mo</h2>
+                <p class="card-text">
+                    30 user included<br>15 GB of storage<br>Phone & email support
+                </p>
+                <a href="#" class="btn btn-primary">Contact us</a>
                 </div>
             </div>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
