Added album & control panel
as of now my project is complete for the part of HTML & CSS and i will add functionality as soon as i learn js

--- a/Spotify_Project/index.html
+++ b/Spotify_Project/index.html
@@ -124,7 +124,12 @@
             </div>
         </div>
         <div class="music-player">
-            <div class="album"> album</div>
+            <div class="album">
+                <img src="./Assets/album_karan.jpeg">
+                <h3>Softly</h3>
+                <p>Karan Aujla, Ikka</p>
+                <i class="fa-solid fa-circle-check"></i>
+            </div>
             <div class="player">
                 <div class="player-icon">
                     <i class="fa-solid fa-shuffle btn"></i>
@@ -139,7 +144,16 @@
                     <span class="end-tym">02:35</span>
                 </div>
             </div>
-            <div class="control">control</div>
+            <div class="control">
+                <i class="fa-regular fa-circle-play"></i>
+                <i class="fa-solid fa-microphone-lines"></i>
+                <i class="fa-solid fa-layer-group"></i>
+                <i class="fa-solid fa-desktop"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                <input type="range" min="0" max="100" class="progress sound">
+                <i class="fa-solid fa-tower-broadcast"></i>
+                <i class="fa-solid fa-up-right-and-down-left-from-center right"></i>
+            </div>
         </div>
     </div>
 </body>
