to do simple app

--- a/javaSript/index.html
+++ b/javaSript/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <h1>TO DO LIST</h1>
+    <h3>Enter <span class="bold">"LIST"</span> to show all task</h3>
+    <h3>Enter <span class="bold">"ADD"</span> to add a task</h3>
+    <h3>Enter <span class="bold">"DELETE"</span> to remove a task</h3>
+    <h3>Enter <span class="bold">"QUIT"</span> to quit the todo app</h3>
     <script src="app.js"></script>
 </body>
 
