TO DO list with DOM

--- a/javaSript/index.html
+++ b/javaSript/index.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-    <h3>Genrate a randome colour</h3>
-    <br>
-    <button>Genrate color</button>
-    <br><br>
-    <div>this is your new colour</div>
+    <h1>To Do List</h1>
+    <input placeholder="Enter your Work" id="inp">
+    <button>Add Task</button>
+    <ul id="list">
+        <li>eat <button class="del">delete</button></li>
+    </ul>
+
 
     <script src="app.js"></script>
 </body>
