--- a/javaSript/index.html
+++ b/javaSript/index.html
@@ -9,14 +9,19 @@
 </head>
 
 <body>
-    <h1>To Do List</h1>
-    <input placeholder="Enter your Work" id="inp">
-    <button>Add Task</button>
-    <ul id="list">
-        <li>eat <button class="del">delete</button></li>
-    </ul>
+    <h1>Siman Says Game</h1>
+    <h2>Press any Key to Start the Game</h2>
 
-
+    <div class="btn-cont">
+        <div class="lineone">
+            <div class="btn red"type="button">1</div>
+            <div class="btn green"type="button">2</div>
+        </div>
+        <div class="linetwo">
+            <div class="btn pur" type="button">3</div>
+            <div class="btn yel" type="button">4</div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 
