--- a/javaSript/index.html
+++ b/javaSript/index.html
@@ -14,12 +14,12 @@
 
     <div class="btn-cont">
         <div class="lineone">
-            <div class="btn red"type="button">1</div>
-            <div class="btn green"type="button">2</div>
+            <div class="btn red"type="button" id="red">1</div>
+            <div class="btn green"type="button" id="green">2</div>
         </div>
         <div class="linetwo">
-            <div class="btn pur" type="button">3</div>
-            <div class="btn yel" type="button">4</div>
+            <div class="btn pur" type="button" id="pur">3</div>
+            <div class="btn yel" type="button" id="yel">4</div>
         </div>
     </div>
     <script src="app.js"></script>
