--- a/javaSript/index.html
+++ b/javaSript/index.html
@@ -9,19 +9,8 @@
 </head>
 
 <body>
-    <h1>Siman Says Game</h1>
-    <h2>Press any Key to Start the Game</h2>
-
-    <div class="btn-cont">
-        <div class="lineone">
-            <div class="btn red"type="button" id="red">1</div>
-            <div class="btn green"type="button" id="green">2</div>
-        </div>
-        <div class="linetwo">
-            <div class="btn pur" type="button" id="pur">3</div>
-            <div class="btn yel" type="button" id="yel">4</div>
-        </div>
-    </div>
+    <h1>hey its me</h1>
+    
     <script src="app.js"></script>
 </body>
 
